@@ -3,6 +3,10 @@ Changes in 3.1.3
 * UPD: Spotlight: more SPARQL query optimisations
 * UPD: Spotlight: new options "sparql results limit", "spotlight
        attributes" and "spotlight expr"
+* FIX: afpd and dbd: Converting from AppleDouble v2 to ea may corrupt
+       the resource fork. In some circumstances an offset calculation
+       is wrong resulting in corrupt resource forks after the
+       conversion. Bug #568.
 
 Changes in 3.1.2
 ================
